# MMP30_Simulation

./: README.md  README.txt
MMp30-Main-assembly/: CMakeLists.txt  package.xml
MMp30-Main-assembly/config/: joint_names_MMp30-Main-assembly.yaml
MMp30-Main-assembly/launch/: display.launch  gazebo.launch
MMp30-Main-assembly/meshes/: FLeftWheel.STL  FRightWheel.STL  Hokuyo.STL  RGBCamera.STL  RLeftWheel.STL  RRightWheel.STL  SensorBaseChassis.STL  base_link.STL
MMp30-Main-assembly/meshes/FinalRobotURDF/: Body.stl  GPS_Mount_Assembly_MMP30.stl  Velodyne.stl
MMp30-Main-assembly/urdf/: MMp30-Main-assembly.csv  MMp30-Main-assembly.urdf
gps_common/: CMakeLists.txt  package.xml
gps_common/launch/: utm_odometry.launch  utm_odometry_sim.launch
gps_common/src/: utm_odometry_node.cpp
mmp30_control/: CMakeLists.txt  package.xml
mmp30_control/config/: control.yaml  dual_ekf_navsat_example.yaml~  ekf_params.yaml  ekf_sim.yaml  localization.yaml  localization.yaml~  navsat_params.yaml
mmp30_control/launch/: control.launch  control.launch~
mmp30_control/src/: NavMaster.py  PCD_CropRow.py  calibrate_heading_sim.cpp
mmp30_control/src/calibration/: calibrate_heading.cpp  calibrate_heading_indoor.cpp
mmp30_description/: CMakeLists.txt  package.xml
mmp30_description/launch/: description.launch
mmp30_description/meshes/: MMP30.dae  wheel.dae
mmp30_description/urdf/: description.xacro  mmp30.urdf.xacro  mmp30_actuated.urdf.xacro  wheel.urdf.xacro
mmp30_gazebo/: CMakeLists.txt  package.xml
mmp30_gazebo/gazebo_models/cotton/: cotton.dae  model.config  model.config~  model.sdf  model.sdf~
mmp30_gazebo/gazebo_models/earth_plane/: model.config  model.sdf
mmp30_gazebo/gazebo_models/plot/: model.config  model.sdf
mmp30_gazebo/launch/: MAS_cotton.launch  empty_world.launch  laser_assembler.launch  mmp30_boyd.launch  mmp30_cotton_field.launch  mmp30_cotton_field.launch~  mmp30_crop_field.launch  mmp30_empty_world.launch  mmp30_playpen.launch  spawn_mmp30.launch
mmp30_gazebo/navtest/: x.txt  y.txt
mmp30_gazebo/src/: assembler.py  laser_assembler_service_caller.cpp  pcd_processer.py  periodic_snapshotter.cpp  row_angle_service.py  scanner.py  test.py  tilter.py  veltest.py
mmp30_gazebo/src/crop/: crop.json  cropped_1.ply
mmp30_gazebo/srv/: row_angle.srv
mmp30_gazebo/urdf/: description.gazebo.xacro  mmp30.gazebo.xacro
mmp30_gazebo/worlds/: Boyd.world  cotton_field_bump.world  cotton_field_j.world  cotton_field_j_bump.world  cotton_field_plant.world  crop_field.world  crop_field.world~  simple_field.world  test_cotton_field_j.world
mmp30_gazebo/worlds/plot/: cotton_field_j.world
mmp30_navigation/: CMakeLists.txt  bsail.yaml  package.xml
mmp30_navigation/config/: costmap_common.yaml  costmap_common.yaml~  planner.yaml  planner.yaml~
mmp30_navigation/data/: navlog.csv
mmp30_navigation/launch/: amcl.launch  amcl_demo.launch  exploration.launch~  exploration_demo.launch  fix.txt  frames.gv  gmapping.launch  gmapping_demo.launch  heading_calibration.launch  move_base.launch  move_base_indoor.launch  move_base_old.launch~  move_base_outdoor.launch  move_base_outdoor_sim.launch  move_base_sim.launch  pure_pursuit_indoor.launch  pure_pursuit_outdoor.launch  robot_due_utm.txt
mmp30_navigation/navdata/: coordinates_files.txt
mmp30_navigation/navdata/DWA/: x.txt  y.txt
mmp30_navigation/navdata/PURE/: x.txt  y.txt
mmp30_navigation/src/: navRecorder.py
mmp30_viz/: CMakeLists.txt  package.xml
mmp30_viz/launch/: view_robot.launch  view_robot_sim.launch  view_robot_test.launch
mmp30_viz/rviz/: robot.rviz  robot_sim.rviz
pure_pursuit_controller/: CMakeLists.txt  package.xml  setup.py
pure_pursuit_controller/launch/: nav.launch
pure_pursuit_controller/param/: nav.yaml
pure_pursuit_controller/src/pure_pursuit_controller/: pure_pursuit_controller.py  (+1 more)
simple_navigation_goals/: CMakeLists.txt  CMakeLists.txt~  coordinates_files.txt  coordinates_files.txt~  indoor_coordinates_files.txt  odom_coordinates_files.txt  package.xml  package.xml~
simple_navigation_goals/nav_master_waypoints/: waypoints.csv
simple_navigation_goals/src/: gps_waypoints.cpp  indoor_waypoints.cpp  odom_waypoints.cpp  pure_pursuits_gpswaypoints.cpp  sim_gps_waypoints.cpp
(+11 files in other folders)
